fix : dark mode image & add favicon

--- a/Docs/index.css
+++ b/Docs/index.css
@@ -1,112 +1,128 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-:root{
-    font-size: 62.5%;
-    font-family: 'Nunito Sans', sans-serif;
+:root {
+  font-size: 62.5%;
+  font-family: "Nunito Sans", sans-serif;
 }
 
-body{
-    height:100vh;
-    width:60%;
-    margin: auto;
-    padding: 3rem 0;
+body {
+  height: 100vh;
+  width: 60%;
+  margin: auto;
+  padding: 3rem 0;
 }
 
-header{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 2.5rem;
-    height: 5rem;
+header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 2.5rem;
+  height: 5rem;
 }
 
-.header-brand{
-    font-weight: 600
+.header-brand {
+  font-weight: 600;
 }
 
-.header-brand span{
-    font-size: 1.5rem;
-    font-weight: 400;
+.header-brand span {
+  font-size: 1.5rem;
+  font-weight: 400;
 }
 
-a{
-    text-decoration: none;
-    font-size: inherit;
-    color: inherit;
+a {
+  text-decoration: none;
+  font-size: inherit;
+  color: inherit;
 }
 
-a:hover{
-    color: var(--secondary);
+a:hover {
+  color: var(--secondary);
 }
 
-main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 17rem);
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 17rem);
 }
 
-.image{
-    --logo-size:22rem;
-    width:var(--logo-size);
-    height:var(--logo-size);
+.image {
+  --logo-size: 22rem;
+  width: var(--logo-size);
+  height: var(--logo-size);
 }
 
-img{
-    width: 100%;
-    height: 100%;
-    margin-bottom: 2rem;
+img {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 2rem;
 }
 
-.description{
-    font-size: 2rem;
-    text-align: center;
+.description {
+  font-size: 2rem;
+  text-align: center;
 }
 
-footer{
-    height: 5rem;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+footer {
+  height: 5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.footer-text{
-    font-size: 1.75rem;
-    font-weight: 600;
-    font-style: italic;
+.footer-text {
+  font-size: 1.75rem;
+  font-weight: 600;
+  font-style: italic;
 }
 
-.footer-links{
-    display: flex;
-    gap: 1.5rem;
-    font-size: 2.2rem;
+.footer-links {
+  display: flex;
+  gap: 1.5rem;
+  font-size: 2.2rem;
 }
 
-.dark-mode-toggle{
-    margin-left: 1rem;
+.dark-mode-toggle {
+  margin-left: 1rem;
 }
 
-.dark-mode-class{
-    background: #162538;
-    color: var(--white-light);
+.dark-mode-class {
+  background: #162538;
+  color: var(--white-light);
 }
 
-@media screen and (max-width:850px) {
-    body{
-        width:80%;
-        padding: 1rem 0;
-    }
+.dark-mode-class .dark-mascot {
+  display: block;
+}
 
-    .image{
-        width:20rem;
-        height:20rem;
-    }
+.dark-mascot {
+  display: none;
+}
+
+.dark-mode-class .light-mascot {
+  display: none;
+}
+
+.light-mascot {
+  display: block;
+}
+
+@media screen and (max-width: 850px) {
+  body {
+    width: 80%;
+    padding: 1rem 0;
+  }
+
+  .image {
+    width: 20rem;
+    height: 20rem;
+  }
 }
